--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,3 +81,6 @@ i{cursor: pointer;}
   padding: 1em;
   border-radius: 15px;
 }
+
+/* PERCHE' NON FUNGEEEEEEE */
+.message:hover.delete{display: unset;}
